--- a/src/main/webapp/opd_search_pre_bill.xhtml
+++ b/src/main/webapp/opd_search_pre_bill.xhtml
@@ -12,44 +12,46 @@
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
-                            <h:outputLabel value="OPD BILL SEARCH TO PAY "/>
-
-                            <h:panelGrid columns="5" >
-                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
-                                </p:calendar>
-                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
-                                </p:calendar>
-                                <p:commandButton id="btnSearch" ajax="false" value="Search All" action="#{searchController.createOpdPreTable}"/>
-                                <p:commandButton ajax="false" value="Not Paid Only" action="#{searchController.createOpdPreTableNotPaid}"/>
-                                <p:commandButton ajax="false" value="Paid Only" action="#{searchController.createOpdPreTablePaid}"/>
-
-
-                                <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
-
-                                <h:outputLabel value="Bill No"/>
-                                <h:outputLabel value="Patient Name"/>                               
-                                <h:outputLabel value="Total"/>
-                                <h:outputLabel value="Net Total"/>   
-                                <h:outputLabel/>
-
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}"/>
-                                <h:outputLabel/>
-
-                            </h:panelGrid>
-
+                            <h:outputLabel value="Opd Bill Search To Pay "/>
                         </f:facet>
+
+                        <h:panelGrid columns="5">
+                            <p:calendar  id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                            </p:calendar>
+                            <p:calendar class="mx-1" id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                            </p:calendar>
+                            <p:commandButton  id="btnSearch" icon="fas fa-search" class="ui-button-success" ajax="false" value="Search All" action="#{searchController.createOpdPreTable}"/>
+                            <p:commandButton class="mx-1 ui-button-warning" icon=" fas fa-times" ajax="false" value="Not Paid Only" action="#{searchController.createOpdPreTableNotPaid}"/>
+                            <p:commandButton  ajax="false" icon="fas fa-check" class="ui-button-warning" value="Paid Only" action="#{searchController.createOpdPreTablePaid}"/>
+
+                        </h:panelGrid>
+
+                        <h:panelGrid columns="5" >
+                            <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
+                            <h:outputLabel value="Bill No"/>
+                            <h:outputLabel value="Patient Name"/>                               
+                            <h:outputLabel value="Total"/>
+                            <h:outputLabel value="Net Total"/>   
+                            <h:outputLabel/>
+
+                            <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}"  />
+                            <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}"  />
+                            <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
+                            <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}" />
+                            <h:outputLabel/>
+
+                        </h:panelGrid>
 
                         <p:defaultCommand target="btnSearch"/>
 
                         <p:dataTable 
+                            class="mt-4"
                             rowIndexVar="i"
                             id="tblBills" 
                             value="#{searchController.bills}" 
                             var="bill"   
                             paginator="true"
+                            paginatorPosition="bottom"
                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                             rowsPerPageTemplate="5,10,15"
                             >
@@ -61,9 +63,11 @@
                             <p:column headerText="Bill No" >
                                 <h:outputLabel value="#{bill.deptId}"  ></h:outputLabel>
                             </p:column>   
+                            
                             <p:column headerText="Department"  >
                                 <h:outputLabel value="#{bill.department.name}"  ></h:outputLabel>
-                            </p:column>   
+                            </p:column> 
+                            
                             <p:column headerText="Billed at"  >
                                 <h:outputLabel value="#{bill.createdAt}" >
                                     <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
@@ -88,7 +92,7 @@
                                 </h:panelGroup>                               
                             </p:column>                                                          
                             <p:column headerText="Net Value" >
- 
+
                                 <h:outputLabel value="#{bill.netTotal}" >
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputLabel>
@@ -97,7 +101,7 @@
 
                             <p:column>
                                 <p:commandButton ajax="false"  value="AcceptPayment" 
-                                                action="#{opdPreSettleController.toSettle(bill)}" 
+                                                 action="#{opdPreSettleController.toSettle(bill)}" 
                                                  disabled="#{bill.referenceBill ne null or bill.cancelled}">   
                                 </p:commandButton>
                             </p:column>
