--- a/src/main/webapp/theater/inward_bill_surgery_issue.xhtml
+++ b/src/main/webapp/theater/inward_bill_surgery_issue.xhtml
@@ -16,74 +16,90 @@
 
 
                 <h:form id="bill" >
+                    <p:growl id="panelError" />
 
                     <p:commandButton id="nullButton2" value="No Action" action="#" style="display: none;"  ></p:commandButton>
                     <p:defaultCommand  target="btnAdd" />  
 
+                    <p:panel rendered="#{pharmacySaleBhtController.batchBill eq null}">
+                        <f:facet name="header" >
+                            <h:outputText styleClass="fas fa-mortar-pestle" />
+                            <h:outputLabel value="Pharmacy BHT Issue" class="m-2"></h:outputLabel>
+                        </f:facet>
+                        <h:outputLabel value="Type Surgery Name or BHT : "/>
+                        <p:autoComplete forceSelection="true" 
+                                        value="#{pharmacySaleBhtController.batchBill}" 
+                                        completeMethod="#{billController.completeSurgeryBills}"
+                                        var="apt2" itemLabel="#{apt2.patientEncounter.bhtNo}"
+                                        itemValue="#{apt2}" size="40" required="true" class="m-2" 
+                                        requiredMessage="Please enter patient details" >
+                            <p:ajax event="itemSelect" process="@this" update="panSearch1 panSearch2"
+                                    listener="#{pharmacySaleBhtController.selectSurgeryBillListener()}"/>
+                            <p:column headerText="Surgery Name">
+                                <h:outputLabel value="#{apt2.procedure.item.name}"/> 
+                            </p:column>
+                            <p:column headerText="BHT NO">
+                                <h:outputLabel value="#{apt2.patientEncounter.bhtNo}"/> 
+                            </p:column>
+                            <p:column headerText="From Time" >
+                                <h:outputLabel value="#{apt2.procedure.fromTime}">
+                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                </h:outputLabel>
+                            </p:column>
+                            <p:column headerText="To Time" >
+                                <h:outputLabel value="#{apt2.procedure.toTime}">
+                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                </h:outputLabel>
+                            </p:column>
+                        </p:autoComplete> 
+                        <p:commandButton
+                            id="btnSelect"
+                            value="Select"
+                            ajax="false"/>
+                    </p:panel>
 
 
-                    <p:panel rendered="#{!pharmacySaleBhtController.billPreview}" style="width: fit-content;" >
+                    <p:panel rendered="#{!pharmacySaleBhtController.billPreview}"  >
 
 
-
-                        <h:panelGrid id="sale" columns="1" class="alignTop" style="width: fit-content;">
-                            <p:panel style="width: fit-content;">
-                                <f:facet name="header" >
-                                    <h:outputLabel value=" Surgery Issue " />
-                                </f:facet>
-
-                                <p:panel>
+                        <p:panel rendered="#{pharmacySaleBhtController.batchBill ne null}">
+                            <f:facet name="header" >
+                                <h:outputLabel styleClass="fas fa-cut"/>
+                                <h:outputLabel value="Surgery Issue" class="mx-4" />
+                            </f:facet>
 
 
-                                    <f:facet name="header" >
-                                        <h:panelGrid columns="20"  >
-                                            <p:commandButton ajax= "false" accesskey="s" value="Settle" 
-                                                            action="#{pharmacySaleBhtController.settleSurgeryBhtIssue()}" 
-                                                             update=":#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} :#{p:resolveFirstComponentWithId('txtQty',view).clientId} "  actionListener="#{pharmacySaleBhtController.calculateAllRates}" >
-                                                <f:facet name="title" >
-                                                    <h:outputLabel value="S" style="text-decoration: underline;" ></h:outputLabel>
-                                                    <h:outputLabel value="ettle"  ></h:outputLabel>
-                                                </f:facet>
-                                            </p:commandButton>
-                                            <p:commandButton accesskey="n" value="New Surgery Issue" ajax="false"
-                                                            action="inward_bill_surgery_issue"
-                                                            actionListener="#{pharmacySaleBhtController.resetAll}"   ></p:commandButton>
-
-
-                                        </h:panelGrid>
-
-
+                            <div class="d-flex justify-content-end align-items-center" >
+                            <h:panelGrid columns="3" class="m-2" >
+                                <p:commandButton ajax= "false" accesskey="s" value="Settle" 
+                                                 action="#{pharmacySaleBhtController.settleSurgeryBhtIssue()}" 
+                                                 style="float: right" class="w-100 ui-button-success m-2" icon="fa fa-check"
+                                                 update=":#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} :#{p:resolveFirstComponentWithId('txtQty',view).clientId} "  actionListener="#{pharmacySaleBhtController.calculateAllRates}" >
+                                    <f:facet name="title" >
+                                        <h:outputLabel value="S" style="text-decoration: underline;" ></h:outputLabel>
+                                        <h:outputLabel value="ettle"  ></h:outputLabel>
                                     </f:facet>
+                                </p:commandButton>
+                                <p:commandButton accesskey="n" value="New Surgery Issue" ajax="false"
+                                                 style="float: right"
+                                                 class="w-100 ui-button-warning m-1" 
+                                                 icon="fa fa-plus"
+                                                 action="inward_bill_surgery_issue"
+                                                 actionListener="#{pharmacySaleBhtController.resetAll}"   ></p:commandButton>
+                            </h:panelGrid>
+                        </div>
 
 
 
 
-                                    <p:panel header="Patient Details">
-                                        <h:outputLabel value="Type Surgery Name or BHT : "/>
-                                        <p:autoComplete forceSelection="true" 
-                                                        value="#{pharmacySaleBhtController.batchBill}" 
-                                                        completeMethod="#{billController.completeSurgeryBills}"
-                                                        var="apt2" itemLabel="#{amp2.bhtNo}"
-                                                        itemValue="#{apt2}" size="30"  style="width: 400px;" >
-                                            <p:ajax event="itemSelect" process="@this" update="panSearch1 panSearch2"
-                                                    listener="#{pharmacySaleBhtController.selectSurgeryBillListener()}"/>
-                                            <p:column headerText="Surgery Name">
-                                                <h:outputLabel value="#{apt2.procedure.item.name}"/> 
-                                            </p:column>
-                                            <p:column headerText="BHT NO">
-                                                <h:outputLabel value="#{apt2.patientEncounter.bhtNo}"/> 
-                                            </p:column>
-                                            <p:column headerText="From Time" >
-                                                <h:outputLabel value="#{apt2.procedure.fromTime}">
-                                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                                </h:outputLabel>
-                                            </p:column>
-                                            <p:column headerText="To Time" >
-                                                <h:outputLabel value="#{apt2.procedure.toTime}">
-                                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                                </h:outputLabel>
-                                            </p:column>
-                                        </p:autoComplete>  
+
+                            <div class="row">
+                                <div class="col-5">
+                                    <p:panel header="">
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-user" />
+                                            <h:outputLabel value="Patient Details" class="mx-4" />
+                                        </f:facet>
 
                                         <br/>
                                         <h:panelGroup id="panSearch1">
@@ -96,16 +112,22 @@
 
 
                                     </p:panel>
+                                </div>
 
+                                <div class="col-7">
+                                    <p:panel>
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-cube" />
+                                            <h:outputLabel value="Add Items" class="mx-4" />
+                                        </f:facet>
 
-                                    <h:panelGrid columns="1" >
-                                        <h:panelGrid columns="6" >
-                                            <h:panelGrid columns="1" >
+                                        <h:panelGrid columns="3"  >
+                                            <h:panelGrid  >
                                                 <p:outputLabel value="Medicines/Devices" ></p:outputLabel>
-                                                <style>.ui-autocomplete-input {width:300px!important;}</style>
+
                                                 <p:autoComplete accesskey="i"   forceSelection="true"  id="acStock" 
                                                                 value="#{pharmacySaleBhtController.stock}" 
-                                                                
+                                                                size="70"
                                                                 completeMethod="#{pharmacySaleController.completeAvailableStocks}" 
                                                                 var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" 
                                                                 >
@@ -130,19 +152,30 @@
                                                 </p:autoComplete>
 
                                             </h:panelGrid>
-                                            <h:panelGrid columns="1" >
-                                                <p:outputLabel value="Quentity" ></p:outputLabel>
+                                            <h:panelGrid class="mx-3" >
+                                                <p:outputLabel value="Quantity" ></p:outputLabel>
                                                 <p:inputText autocomplete="off"  accesskey="q"   
                                                              id="txtQty" 
                                                              value="#{pharmacySaleBhtController.qty}" 
-                                                             style="width: 50px!important;">
+                                                             style="width: 60px!important;">
                                                     <p:ajax event="keyup"  listener="#{pharmacySaleBhtController.calculateBillItemListner}" process="acStock txtQty"></p:ajax>
                                                     <p:ajax event="blur"  listener="#{pharmacySaleBhtController.calculateBillItemListner}" process="acStock txtQty"></p:ajax>
                                                 </p:inputText>
                                             </h:panelGrid>
 
-                                            <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
-                                                             action="#{pharmacySaleBhtController.addBillItem}" process="@this acStock txtQty" update=":#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} acStock focusItem tabI"  ></p:commandButton>
+                                            <h:panelGrid >
+                                                <p:outputLabel value="" ></p:outputLabel>
+                                                <p:commandButton  accesskey="a" 
+                                                                  id="btnAdd" 
+                                                                  value="Add" 
+                                                                  icon="fa fa-plus" 
+                                                                  class="ui-button-success"
+                                                                  action="#{pharmacySaleBhtController.addBillItem}" 
+                                                                  process="@this acStock txtQty" 
+                                                                  update=":#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} acStock focusItem tabI"  ></p:commandButton>
+                                            </h:panelGrid>
+
+
 
                                             <p:focus id="focusQty" for="txtQty" ></p:focus>
                                             <p:focus id="focusItem" for="acStock" ></p:focus>
@@ -153,13 +186,14 @@
                                         <p:tabView id="tabI" dynamic="true" activeIndex="#{pharmacySaleBhtController.activeIndex}" >
 
                                             <p:tab title="Availability" >
-                                                <h:panelGrid columns="1" >
+                                                <h:panelGrid columns="3" >
                                                     <p:panel header="Not Available" >
                                                         <p:selectOneListbox id="lstSelectItems" style="width: 300px; height: 200px; max-width: 300px; max-height: 200px; min-width: 300px; min-height: 200px;" value="#{pharmacySaleBhtController.selectedAlternative}"  >
                                                             <f:selectItems  value="#{pharmacySaleBhtController.itemsWithoutStocks}" var="si" itemLabel="#{si.name}" itemValue="#{si}" ></f:selectItems>
                                                             <p:ajax event="change" process="lstSelectItems" update="lstReplaceableBatch" listener="#{pharmacySaleBhtController.selectReplaceableStocks}" ></p:ajax>
                                                         </p:selectOneListbox>
                                                     </p:panel>
+                                                    <p:spacer width="20px"></p:spacer>
                                                     <p:panel header="Available" >
                                                         <p:selectOneListbox id="lstReplaceableBatch" style="width: 300px; height: 200px; max-width: 300px; max-height: 200px; min-width: 300px; min-height: 200px;"  >
                                                             <f:selectItems  value="#{pharmacySaleBhtController.replaceableStocks}" var="rs" itemLabel="#{rs.itemBatch.item.name}" itemValue="#{rs}" ></f:selectItems>
@@ -216,17 +250,25 @@
                                                 </h:panelGrid>
                                             </p:tab>
                                         </p:tabView>
+                                    </p:panel>
+                                </div>
+                            </div>
 
 
-                                    </h:panelGrid>
-
-                                </p:panel>
 
 
 
-                            </p:panel>
 
-                        </h:panelGrid>
+
+
+
+
+
+
+
+                        </p:panel>
+
+
 
 
                     </p:panel>
@@ -250,8 +292,8 @@
                                 <p:printer target="gpBillPreview" ></p:printer>
                             </p:commandButton>
                             <p:commandButton accesskey="n" value="New Pharmacy Bill" ajax="false" 
-                                            action="inward_bill_surgery_issue"
-                                            actionListener="#{pharmacySaleBhtController.resetAll()}"  ></p:commandButton>
+                                             action="inward_bill_surgery_issue"
+                                             actionListener="#{pharmacySaleBhtController.resetAll()}" class="ml-2"  ></p:commandButton>
 
                         </div>
                         <div >
